...
        <ButtonPrimary
          label={
            submitting ? t('newTransaction.saving') : t('newTransaction.save')
          }
          onPress={handleSave}
          disabled={submitting}
          testID="tx-save"
        />
      </View>
    </View>
  );
}

...
